fix: on Safari text color, top margin

--- a/assets/popup_offer.css
+++ b/assets/popup_offer.css
@@ -50,7 +50,7 @@ body {
 @media (max-width: 1024px) {
     .popup-offer {
         width: 90%;
-        margin-top: 18%;
+        margin-top: 15%;
     }
 }
 @media (max-width: 768px) {
@@ -137,6 +137,7 @@ body {
 .popup-offer button {
     background: none;
     border: 1px solid var(--color-black);
+    color: var(--color-black);
     padding: 10px 30px;
     margin-top: 30px;
     text-transform: uppercase;
